# simple-smtp

./: Cargo.toml  README.md  taplo.toml
.github/workflows/: ci.yml
agents/: how_to_implement_issues.md
examples/: outbound_587.rs
src/: address.rs  buffer.rs  error.rs  lib.rs  message.rs  smtp.rs
src/integrations/: embassy.rs  lettre.rs  tokio.rs
src/message/: address.rs  datetime.rs
tests/: mock_smtp.rs
