[package]
name = "simple-smtp"
version = "0.1.0"
edition = "2024"

[features]
default = ["embassy", "tokio", "lettre", "rustls"]
# for no_std environments
std = ["alloc", "embassy-net?/std"]
alloc = ["embassy-net?/alloc"]

#optional integrations with other crates
tokio = ["std", "dep:tokio", "dep:tokio-rustls", "dep:webpki-roots"]
rustls = ["std", "dep:rustls"]
embassy = ["dep:embassy-net"]
lettre = ["dep:lettre"]

[dependencies]
thiserror = "2.0.12"
base64 = { version = "0.22.1", default-features = false }


# lettre message integration
lettre = { version = "0.11.15", optional = true, default-features = false, features = [
    "builder",
    "dkim",
] }

#tokio integration
tokio = { version = "1.45.0", optional = true, features = ["io-util"] }

#tokio rustls integration
tokio-rustls = { version = "0.26.2", optional = true } # hickory-client = "0.25.2"
webpki-roots = { version = "1.0.0", optional = true }
rustls = { version = "0.23.27", optional = true }

# embassy integration
# could just integrate with embedded-io?
embassy-net = { version = "0.7.0", optional = true, features = [
    "tcp",
    "proto-ipv4",
    "proto-ipv6",
    "medium-ip",
] }


[dev-dependencies]
anyhow = "1"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "net"] }
