[package]
name = "simple-smtp"
version = "0.1.0"
edition = "2024"

[features]
default = ["embassy", "lettre", "log-04", "rustls", "tokio"]
# for no_std environments
std = ["alloc", "chrono/clock", "embassy-net?/std"]
alloc = ["embassy-net?/alloc"]

log-04 = ["dep:log"]

#optional integrations with other crates
tokio = ["dep:tokio", "dep:tokio-rustls", "dep:webpki-roots", "std"]
rustls = ["dep:rustls", "std"]
embassy = ["dep:embassy-net"]
lettre = ["dep:lettre"]

[dependencies]
base64 = { version = "0.22.1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4.22", optional = true, default-features = false }

# lettre message integration
lettre = { version = "0.11.15", optional = true, default-features = false, features = ["builder", "dkim"] }

#tokio integration
tokio = { version = "1.45.0", optional = true, features = ["io-util"] }

#tokio rustls integration
rustls = { version = "0.23.27", optional = true }
tokio-rustls = { version = "0.26.2", optional = true } # hickory-client = "0.25.2"
webpki-roots = { version = "1.0.0", optional = true }

# embassy integration
# could just integrate with embedded-io?
embassy-net = { version = "0.7.1", optional = true, features = ["medium-ip", "proto-ipv4", "proto-ipv6", "tcp"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1.45.0", features = ["macros", "net", "rt-multi-thread"] }

[lints.clippy]
# allow for now because signatures might change
new_without_default = "allow"
